[gd_scene load_steps=7 format=3 uid="uid://dd3prc3ylw8qq"]

[ext_resource type="Script" path="res://world.gd" id="1_qe0na"]
[ext_resource type="PackedScene" uid="uid://c1oyh8fpnlhpg" path="res://Player/player.tscn" id="2_0emgm"]
[ext_resource type="PackedScene" uid="uid://c3pwq6yr7ooeu" path="res://World/level_tile_map.tscn" id="4_b5ps3"]

[sub_resource type="Animation" id="Animation_1jfef"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Start in 3"]
}

[sub_resource type="Animation" id="Animation_36kc5"]
resource_name = "countdown"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["Start in 3", "Start in 2", "Start in 1"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f6d7j"]
_data = {
"RESET": SubResource("Animation_1jfef"),
"countdown": SubResource("Animation_36kc5")
}

[node name="World" type="Node2D"]
script = ExtResource("1_qe0na")

[node name="Player" parent="." instance=ExtResource("2_0emgm")]

[node name="LevelTileMap" parent="." instance=ExtResource("4_b5ps3")]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="StartIn" type="ColorRect" parent="HUD"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.52549)

[node name="CenterContainer" type="CenterContainer" parent="HUD/StartIn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartInLabel" type="Label" parent="HUD/StartIn/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start in 3"

[node name="CenterContainer" type="CenterContainer" parent="HUD"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="LevelTimeLabel" type="Label" parent="HUD/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_f6d7j")
}
